Verbeteren TrainingCenterDatabaseExtractor