@@ -4,33 +4,41 @@ import com.garmin.xmlschemas.trainingcenterdatabase.v2.*;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class TrainingCenterDatabaseExtractor {
 
+    private TrainingCenterDatabaseExtractor() {
+        // Util class not to be instantiated
+    }
+
     static List<TrackpointT> extractTrackpoints(TrainingCenterDatabaseT trainingCenterDatabaseT) {
+        List<ActivityLapT> activityLapTS = extractLaps(trainingCenterDatabaseT);
+        if (activityLapTS == null) {
+            return new ArrayList<>();
+        }
+        return getTrackpointsForLaps(activityLapTS);
+    }
+
+    private static List<ActivityLapT> extractLaps(TrainingCenterDatabaseT trainingCenterDatabaseT) {
         if (trainingCenterDatabaseT.getActivities() == null || trainingCenterDatabaseT.getActivities().getActivity() == null) {
             return new ArrayList<>();
         }
         List<ActivityT> activities = trainingCenterDatabaseT.getActivities().getActivity();
         return activities.stream()
-                .flatMap(activityT -> getTrackpointsForActivity(activityT).stream())
-                .collect(Collectors.toList());
+                .flatMap(activityT -> activityT.getLap().stream())
+                .toList();
     }
 
-    private static List<TrackpointT> getTrackpointsForActivity(ActivityT activity) {
-        List<ActivityLapT> laps = activity.getLap();
-        return laps != null ?
-                laps.stream()
-                        .flatMap(activityLapT -> getTrackpointsForLaps(activityLapT).stream())
-                        .collect(Collectors.toList()) :
-                new ArrayList<>();
+    private static List<TrackpointT> getTrackpointsForLaps(List<ActivityLapT> laps) {
+        return laps.stream()
+                .flatMap(activityLapT -> getTrackpointsForLap(activityLapT).stream())
+                .toList();
     }
 
-    private static List<TrackpointT> getTrackpointsForLaps(ActivityLapT activityLapT) {
+    private static List<TrackpointT> getTrackpointsForLap(ActivityLapT activityLapT) {
         return activityLapT.getTrack().stream()
                 .flatMap(trackT -> getTrackpointsForTrack(trackT).stream())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static List<TrackpointT> getTrackpointsForTrack(TrackT trackT) {
